unpackaged/objects/Result_Set__c.object
<CustomObject>
    <fields>
        <fullName>Loss__c</fullName>
        <label>Loss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summation__c</fullName>
        <label>Summation</label>
        <referenceTo>Summation__c</referenceTo>
        <relationshipLabel>Result Sets</relationshipLabel>
        <relationshipName>Result_Sets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tie__c</fullName>
        <label>Tie</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Win__c</fullName>
        <label>Win</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Result Set</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Summation__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Loss__c</columns>
        <columns>Tie__c</columns>
        <columns>Win__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Result: {00000}</displayFormat>
        <label>Result Numer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Result Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>